--- a/crud/templates/index.html
+++ b/crud/templates/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Django - CRUD</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans"
@@ -86,7 +86,67 @@
     </div>
     {% endblock content %}
 
-    <!-- MODAL -->
+    <!-- CREATE MODAL -->
+    <div
+      class="modal fade"
+      id="modalRegisterForm"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="myModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <form action="{% url 'create' %}" method="POST">
+          {% csrf_token %}
+          <div class="modal-content">
+            <div class="modal-header text-center">
+              <h4 class="modal-title w-300 font-weight-bold">Django - CRUD</h4>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body mx-3">
+              <div class="md-form mb-5">
+                <input
+                  type="text"
+                  id="orangeForm-name"
+                  class="form-control validate"
+                  name="name"
+                  placeholder="Name"
+                />
+              </div>
+              <div class="md-form mb-5">
+                <input
+                  type="text"
+                  id="orangeForm-email"
+                  class="form-control validate"
+                  name="lastName"
+                  placeholder="Last Name"
+                />
+              </div>
+              <div class="md-form mb-4">
+                <input
+                  type="email"
+                  id="orangeForm-pass"
+                  class="form-control validate"
+                  name="email"
+                  placeholder="Email"
+                />
+              </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+              <button type="submit" class="btn">Sign up</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- CREATE MODAL -->
     <div
       class="modal fade"
       id="modalRegisterForm"
