chore: lint change

--- a/crud/templates/update.html
+++ b/crud/templates/update.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,68 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Django - CRUD</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
+          rel="stylesheet" />
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="{% static 'css/update.css' %}" />
   </head>
   <body>
     <div class="registration-form">
-      <form action="{% url 'update' person.id %}" method="POST">
+      <form action="{% url 'update' person.id %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-          <input
-            type="text"
-            class="form-control item"
-            id="username"
-            name="name"
-            placeholder="Name"
-            value="{{person.name}}"
-          />
+          <input type="text"
+                 class="form-control item"
+                 id="username"
+                 name="name"
+                 placeholder="Name"
+                 value="{{ person.name }}" />
         </div>
         <div class="form-group">
-          <input
-            type="text"
-            class="form-control item"
-            id="password"
-            name="lastName"
-            placeholder="Last Name"
-            value="{{person.lastName}}"
-          />
+          <input type="text"
+                 class="form-control item"
+                 id="password"
+                 name="lastName"
+                 placeholder="Last Name"
+                 value="{{ person.lastName }}" />
         </div>
         <div class="form-group">
-          <input
-            type="email"
-            class="form-control item"
-            id="email"
-            name="email"
-            placeholder="Email"
-            value="{{person.email}}"
-          />
+          <input type="email"
+                 class="form-control item"
+                 id="email"
+                 name="email"
+                 placeholder="Email"
+                 value="{{ person.email }}" />
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-block create-account">
-            Update
-          </button>
+          <button type="submit" class="btn btn-block create-account">Update</button>
         </div>
       </form>
     </div>
-
     <!-- page specific script tag here -->
     {% block script %}
-    <script
-      type="text/javascript"
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"
-    ></script>
+      <script type="text/javascript"
+              src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript"
+              src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     {% endblock script %}
   </body>
 </html>
