--- a/crud/templates/index.html
+++ b/crud/templates/index.html
@@ -1,142 +1,113 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Django - CRUD</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans" />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet"
+          href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="{% static 'css/index_table.css' %}" />
   </head>
   <body>
     {% block content %}
-    <div class="container-lg">
-      <div class="table-responsive">
-        <div class="table-wrapper">
-          <div class="table-title">
-            <div class="row">
-              <div class="col-sm-8">
-                <h2><b>Django - CRUD</b></h2>
-              </div>
-              <div class="col-sm-4">
-                <button
-                  type="button"
-                  class="btn btn-info add-new"
-                  data-toggle="modal"
-                  data-target="#modalRegisterForm"
-                >
-                  <i class="fa fa-plus"></i> Add New
-                </button>
+      <div class="container-lg">
+        <div class="table-responsive">
+          <div class="table-wrapper">
+            <div class="table-title">
+              <div class="row">
+                <div class="col-sm-8">
+                  <h2>
+                    <b>Django - CRUD</b>
+                  </h2>
+                </div>
+                <div class="col-sm-4">
+                  <button type="button"
+                          class="btn btn-info add-new"
+                          data-toggle="modal"
+                          data-target="#modalRegisterForm">
+                    <i class="fa fa-plus"></i> Add New
+                  </button>
+                </div>
               </div>
             </div>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Last Name</th>
+                  <th>Email</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for person in people %}
+                  <tr>
+                    <td>{{ person.name }}</td>
+                    <td>{{ person.lastName }}</td>
+                    <td>{{ person.email }}</td>
+                    <td>
+                      <a href="{% url 'edit' person.id %}"
+                         class="edit"
+                         title="Edit"
+                         data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                      <a href="{% url 'delete' person.id %}"
+                         class="delete"
+                         title="Delete"
+                         data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                    </td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
           </div>
-          <table class="table table-bordered">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for person in people %}
-              <tr>
-                <td>{{person.name}}</td>
-                <td>{{person.lastName}}</td>
-                <td>{{person.email}}</td>
-                <td>
-                  <a
-                    href="{% url 'edit' person.id %}"
-                    class="edit"
-                    title="Edit"
-                    data-toggle="tooltip"
-                    ><i class="material-icons">&#xE254;</i></a
-                  >
-                  <a
-                    href="{% url 'delete' person.id %}"
-                    class="delete"
-                    title="Delete"
-                    data-toggle="tooltip"
-                    ><i class="material-icons">&#xE872;</i></a
-                  >
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
         </div>
       </div>
-    </div>
     {% endblock content %}
-
     <!-- CREATE MODAL -->
-    <div
-      class="modal fade"
-      id="modalRegisterForm"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="myModalLabel"
-      aria-hidden="true"
-    >
+    <div class="modal fade"
+         id="modalRegisterForm"
+         tabindex="-1"
+         role="dialog"
+         aria-labelledby="myModalLabel"
+         aria-hidden="true">
       <div class="modal-dialog" role="document">
-        <form action="{% url 'create' %}" method="POST">
+        <form action="{% url 'create' %}" method="post">
           {% csrf_token %}
           <div class="modal-content">
             <div class="modal-header text-center">
               <h4 class="modal-title w-300 font-weight-bold">Django - CRUD</h4>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body mx-3">
               <div class="md-form mb-5">
-                <input
-                  type="text"
-                  id="orangeForm-name"
-                  class="form-control validate"
-                  name="name"
-                  placeholder="Name"
-                />
+                <input type="text"
+                       id="orangeForm-name"
+                       class="form-control validate"
+                       name="name"
+                       placeholder="Name" />
               </div>
               <div class="md-form mb-5">
-                <input
-                  type="text"
-                  id="orangeForm-email"
-                  class="form-control validate"
-                  name="lastName"
-                  placeholder="Last Name"
-                />
+                <input type="text"
+                       id="orangeForm-email"
+                       class="form-control validate"
+                       name="lastName"
+                       placeholder="Last Name" />
               </div>
               <div class="md-form mb-4">
-                <input
-                  type="email"
-                  id="orangeForm-pass"
-                  class="form-control validate"
-                  name="email"
-                  placeholder="Email"
-                />
+                <input type="email"
+                       id="orangeForm-pass"
+                       class="form-control validate"
+                       name="email"
+                       placeholder="Email" />
               </div>
             </div>
             <div class="modal-footer d-flex justify-content-center">
@@ -147,56 +118,43 @@
       </div>
     </div>
     <!-- CREATE MODAL -->
-    <div
-      class="modal fade"
-      id="modalRegisterForm"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="myModalLabel"
-      aria-hidden="true"
-    >
+    <div class="modal fade"
+         id="modalRegisterForm"
+         tabindex="-1"
+         role="dialog"
+         aria-labelledby="myModalLabel"
+         aria-hidden="true">
       <div class="modal-dialog" role="document">
-        <form action="{% url 'create' %}" method="POST">
+        <form action="{% url 'create' %}" method="post">
           {% csrf_token %}
           <div class="modal-content">
             <div class="modal-header text-center">
               <h4 class="modal-title w-300 font-weight-bold">Django - CRUD</h4>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body mx-3">
               <div class="md-form mb-5">
-                <input
-                  type="text"
-                  id="orangeForm-name"
-                  class="form-control validate"
-                  name="name"
-                  placeholder="Name"
-                />
+                <input type="text"
+                       id="orangeForm-name"
+                       class="form-control validate"
+                       name="name"
+                       placeholder="Name" />
               </div>
               <div class="md-form mb-5">
-                <input
-                  type="text"
-                  id="orangeForm-email"
-                  class="form-control validate"
-                  name="lastName"
-                  placeholder="Last Name"
-                />
+                <input type="text"
+                       id="orangeForm-email"
+                       class="form-control validate"
+                       name="lastName"
+                       placeholder="Last Name" />
               </div>
               <div class="md-form mb-4">
-                <input
-                  type="email"
-                  id="orangeForm-pass"
-                  class="form-control validate"
-                  name="email"
-                  placeholder="Email"
-                />
+                <input type="email"
+                       id="orangeForm-pass"
+                       class="form-control validate"
+                       name="email"
+                       placeholder="Email" />
               </div>
             </div>
             <div class="modal-footer d-flex justify-content-center">
@@ -206,16 +164,13 @@
         </form>
       </div>
     </div>
-
     <!-- page specific script tag here -->
     {% block script %}
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+              integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+              crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     {% endblock script %}
   </body>
 </html>
